Try To fetch report data

--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,8 +1,8 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/niki/Documents/Development/flutter
-FLUTTER_APPLICATION_PATH=/Users/niki/Documents/Bootcamp/Batch 4/flutter-batch-4-project
+FLUTTER_ROOT=/opt/homebrew/Caskroom/flutter/3.27.2/flutter
+FLUTTER_APPLICATION_PATH=/Users/aryanando/Project.nosync/flutter-batch-4-project
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/aryanando/Project.nosync/flutter-batch-4-project/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
@@ -11,4 +11,4 @@ EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.dart_tool/package_config.json
+PACKAGE_CONFIG=/Users/aryanando/Project.nosync/flutter-batch-4-project/.dart_tool/package_config.json
