--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   dio: ^5.7.0
   intl: ^0.20.1
   mockito: ^5.4.5
+  image_picker: ^1.1.2
+  video_player: ^2.9.3
 
 dev_dependencies:
   flutter_test:
