--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   mockito: ^5.4.5
   image_picker: ^1.1.2
   video_player: ^2.9.3
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
